src/components/pages/Applications/Applications.module.css
.applications {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 20px;
    padding: 20px;
}

.link {
    color: #00ABB2;
    margin-left: 6px;
}

.title{
    color: #707070;
}

